# libde265

./: Makefile.am  configure.ac
libde265/: image.cc  motion.cc
libde265/encoder/: encoder-context.cc
libheif/: Makefile.am  box.cc  box.h  heif.cc
